--- a/cardValues/cardValues.html
+++ b/cardValues/cardValues.html
@@ -57,7 +57,7 @@
     <!-- footer -->
     <footer>
         <div class="arrows">
-            <a href="../index/index.html"><i class="fa-solid fa-play leftArrow"></i></a>
+            <a href="../index.html"><i class="fa-solid fa-play leftArrow"></i></a>
             <a href="../howToPlay/howToPlay.html"><i class="fa-solid fa-play rightArrow"></i></a>
         </div>
 
